--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
-    <string name="app_name">CapstoneProject</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">ZA\'R\'AZ</string>
     <string name="home">Home</string>
     <string name="search">Search</string>
     <string name="favorites">Favorites</string>
