Retrofit kullanildi. Anasayfa tasarimi tamamlandi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="surname">SURNAME</string>
     <string name="name">NAME</string>
     <string name="create_account">CREATE ACCOUNT</string>
+    <string name="product_price">%.2f TL</string>
+    <string name="special_prices">Özel Fiyatlar</string>
+    <string name="all_products">Tüm Ürünler</string>
 </resources>
