--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,10 +17,15 @@
     <string name="product_price">%.2f TL</string>
     <string name="special_prices">Özel Fiyatlar</string>
     <string name="all_products">Tüm Ürünler</string>
-    <string name="baslik">Baslik</string>
-    <string name="fiyat">Fiyat</string>
-    <string name="aciklama">Aciklama</string>
-    <string name="indirimli_fiyat">Indirimli Fiyat</string>
-    <string name="sepete_ekle">Sepete Ekle</string>
+    <string name="title">Baslik</string>
+    <string name="price">Fiyat</string>
+    <string name="description">Aciklama</string>
+    <string name="discound_price">Indirimli Fiyat</string>
+    <string name="add_to_basket">Sepete Ekle</string>
     <string name="category">Kategori = %s</string>
+    <string name="remove_all">Tümünü Sil</string>
+    <string name="my_cart">Sepetim</string>
+    <string name="cart_price">Price</string>
+    <string name="cart_title">Title</string>
+    <string name="cart_discound_price">DiscoundPrice</string>
 </resources>
