Payment ve Success ekranları yapıldı.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,30 +4,43 @@
     <string name="search">Search</string>
     <string name="favorites">Favorites</string>
     <string name="cart">Cart</string>
-    <string name="log_in_to_your_account">LOG IN TO YOUR ACCOUNT</string>
+    <string name="log_in_to_your_account">Kayıtlı hesap ile giriş yapın!</string>
     <string name="email">EMAIL</string>
-    <string name="password">PASSWORD</string>
-    <string name="log_in">LOG IN</string>
-    <string name="need_an_account">NEED AN ACCOUNT?</string>
-    <string name="register">REGISTER</string>
-    <string name="personal_details">PERSONAL DETAILS</string>
-    <string name="surname">SURNAME</string>
-    <string name="name">NAME</string>
-    <string name="create_account">CREATE ACCOUNT</string>
+    <string name="password">ŞİFRE</string>
+    <string name="log_in">GİRİŞ</string>
+    <string name="need_an_account">YENİ HESAP OLUŞTURUN</string>
+    <string name="register">KAYIT OL</string>
+    <string name="personal_details">KİŞİSEL DETAYLAR</string>
+    <string name="surname">SOYİSİM</string>
+    <string name="name">İSİM</string>
+    <string name="create_account">HESAP OLUŞTURUN</string>
     <string name="product_price">%.2f TL</string>
     <string name="special_prices">Özel Fiyatlar</string>
     <string name="all_products">Tüm Ürünler</string>
     <string name="title">Baslik</string>
     <string name="price">Fiyat</string>
     <string name="description">Aciklama</string>
-    <string name="discound_price">Indirimli Fiyat</string>
+    <string name="discount_price">İndirimli Fiyat</string>
     <string name="add_to_basket">Sepete Ekle</string>
     <string name="category">Kategori = %s</string>
     <string name="remove_all">Tümünü Sil</string>
     <string name="my_cart">Sepetim</string>
-    <string name="cart_price">Price</string>
-    <string name="cart_title">Title</string>
-    <string name="cart_discound_price">DiscoundPrice</string>
+    <string name="cart_price">Ücret</string>
+    <string name="cart_title">Başlık</string>
+    <string name="cart_discount_price">DiscoundPrice</string>
     <string name="total">TOPLAM</string>
     <string name="forward">DEVAM ET</string>
+    <string name="cart_no">KART NUMARASI</string>
+    <string name="expiration_date">SON KULLANMA TARİHİ</string>
+    <string name="cart_name">KART HAMİLİ</string>
+    <string name="cvv_no">CVV GÜVENLİK KODU</string>
+    <string name="address">ADRES</string>
+    <string name="card_number_message">Lütfen geçerli bir kart numarası giriniz!</string>
+    <string name="card_date_message">Lütfen geçerli bir son kullanma tarihi giriniz!</string>
+    <string name="card_name_message">Lütfen geçerli bir isim giriniz!</string>
+    <string name="email_address">Lütfen geçerli bir mail adresi giriniz</string>
+    <string name="password_message">Lütfen en az 6 haneli şifrenizi girin.</string>
+    <string name="try_again">Lütfen tekrar deneyiniz.</string>
+    <string name="order_received">SİPARİŞİNİZ ALINDI</string>
+    <string name="go_home">ANA SAYFAYA GİT</string>
 </resources>
