--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="try_again">Lütfen tekrar deneyiniz.</string>
     <string name="order_received">SİPARİŞİNİZ ALINDI</string>
     <string name="go_home">ANA SAYFAYA GİT</string>
+    <string name="my_favorites">Favorilerim</string>
 </resources>
